force-app/main/default/objects/TimeSlot/fields/Speciality__c.field-meta.xml
<CustomField>
    <fullName>Speciality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Speciality</label>
    <referenceTo>Technician_Specialty__c</referenceTo>
    <relationshipLabel>Time Slots</relationshipLabel>
    <relationshipName>Time_Slots</relationshipName>
    <type>Lookup</type>
</CustomField>