force-app/main/default/objects/TimeSlot/fields/Specific_Date__c.field-meta.xml
<CustomField>
    <fullName>Specific_Date__c</fullName>
    <label>Specific Date</label>
    <type>Date</type>
</CustomField>